--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Himanshu Blog
+title: Himanshu’s Blog
 header-img: img/home-bg.jpg
-email: your-email@yourdomain.com
-description: "Write your site description here. It will be used as your sites meta description as well!"
+email: himanshudedge@gmail.com
+description: ““
 baseurl: ""
 url: "http://yourdomain.com"
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  IronSummitMedia
+twitter_username: 
+github_username:  himanshudedge
+facebook_username:  himanshu.dedge
 
 # Build settings
 markdown: kramdown
