--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,6 @@ facebook_username:  himanshu.dedge
 markdown: kramdown
 highlighter: pygments
 permalink: pretty
-pagination: true
+Pagination: true
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
