--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,5 @@ permalink: pretty
 Pagination: true
 paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+categories: [photos, projects]
+
